<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.EditActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/timers_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="center"
                android:text="@string/add_timer"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/name"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_column="1"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:autofillHints=""
                android:hint="@string/name"
                android:inputType="text"
                android:padding="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/duration"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/duration_edit_text"
                android:layout_column="1"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/duration"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/add_timer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/add" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>